Add error image on error loading help embed

--- a/client/pages/help/index.html
+++ b/client/pages/help/index.html
@@ -82,6 +82,6 @@
       width: 100vw;
       height: calc(100vh - 60px);
       border: none;
-    " onerror></iframe>
+    "></iframe>
   </body>
 </html>
