--- a/client/pages/remoteControl/index.html
+++ b/client/pages/remoteControl/index.html
@@ -8,7 +8,7 @@
       Object.assign(process.env, require("fs").readFileSync(require("path").join(process.resourcesPath, "app.asar/.env"), "utf8").split("\n").filter((line) => !line.startsWith("#")).map((line) => line.split("=")).reduce((data, accumulator) => ({
         ...data,
         ...{
-          [accumulator[0]]: accumulator[1]
+          [accumulator[0]]: JSON.parse(accumulator[1])
         }
       }), {}));
       let socketScriptElement = document.createElement("script");
