--- a/client/pages/remoteControl/index.html
+++ b/client/pages/remoteControl/index.html
@@ -5,10 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Remote Control</title>
     <script defer>
-      Object.assign(process.env, require("fs").readFileSync(require("path").join(process.resourcesPath, "app.asar/.env"), "utf8").split("\n").filter((line) => !line.startsWith("#") && (line.split("=").length > 1)).map((line) => line.split("\r")[0].split("#")[0].split("=")).reduce((data, accumulator) => ({
+      Object.assign(process.env, require("fs").readFileSync(require("path").join(process.resourcesPath, "app.asar/.env"), "utf8").split("\n").filter((line) => !line.startsWith("#") && (line.split("=").length > 1)).map((line) => line.trim().split("#")[0].split("=")).reduce((data, accumulator) => ({
         ...data,
         ...{
-          [accumulator[0]]: JSON.parse(accumulator[1])
+          [accumulator[0]]: JSON.parse(accumulator[1].trim())
         }
       }), {}));
       let socketScriptElement = document.createElement("script");
