Remove removed dependencies from documentation files

--- a/server/pages/help/markdown/markdown.html
+++ b/server/pages/help/markdown/markdown.html
@@ -150,11 +150,8 @@ If you're using Linux Bash for Windows, <a href="https://www.howtogeek.com/26157
 <li><a href="https://github.com/jitsi/robotjs">@jitsi/robotjs</a></li>
 <li><a href="https://socket.io">socket.io</a></li>
 <li><a href="https://socket.io">socket.io-client</a></li>
-<li><a href="https://github.com/motdotla/dotenv">dotenv</a></li>
-<li><a href="https://github.com/electron/update-electron-app">update-electron-app</a></li>
-<li><a href="https://github.com/expressjs/express">express</a></li>
-<li><a href="https://github.com/express-rate-limit/express-rate-limit">express-rate-limit</a></li>
-<li><a href="https://github.com/expressjs/body-parser">body-parser</a></li>
+<li><a href="https://github.com/expressjs/express">Express.js</a></li>
+<li><a href="https://github.com/DinoscapeProgramming/Express-Docs">Express Docs</a></li>
 <li><a href="https://github.com/shd101wyy/crossnote">Crossnote</a></li>
 </ul>
 <h2 id="support">Support </h2>
