Added Discord Bots to Integrations Design

--- a/client/pages/integrations/index.html
+++ b/client/pages/integrations/index.html
@@ -124,15 +124,13 @@
 <div style="
         width: calc(100% - 30px);
         height: 1px;
-        margin-bottom: -5px;
         margin-left: 15px;
         background-color: #141414b0;
         opacity: 0.5;
       "></div>
         <div style="
-    height: 100vh;
 ">
-    <div data-id="e221070e" style="display: flex; flex-direction: row; align-items: center; width: calc(100% - 30px); height: 47.5px; margin-top: 12.5px; margin-left: 15px; background-color: white; border-radius: 7.5px; font-family: system-ui;"><input style="margin-left: 6.5px; font-size: 15px; font-weight: 400; border: none; padding: 8.5px; width: calc(6ch - 5px);"><div style="display: flex; flex-direction: row; position: absolute; right: 52.5px;"><div class="scriptContainerButton" style="display: flex;justify-content: center;align-items: center;width: 82.5px;height: 30.5px;color: white;background-color: rgb(21, 155, 225);border-radius: 7.5px;margin-right: 5px;text-align: center;border: none;">
+    <div data-id="e221070e" style="display: flex;flex-direction: row;align-items: center;width: calc(100% - 30px);height: 47.5px;margin-top: 7.5px;margin-left: 15px;background-color: white;border-radius: 7.5px;font-family: system-ui;"><input style="margin-left: 6.5px; font-size: 15px; font-weight: 400; border: none; padding: 8.5px; width: calc(6ch - 5px);"><div style="display: flex; flex-direction: row; position: absolute; right: 52.5px;"><div class="scriptContainerButton" style="display: flex;justify-content: center;align-items: center;width: 82.5px;height: 30.5px;color: white;background-color: rgb(21, 155, 225);border-radius: 7.5px;margin-right: 5px;text-align: center;border: none;">
     <input style="
     width: calc(2ch + 1px);
     border: none;
@@ -148,7 +146,43 @@
     margin-right: 0.5px;
 "> uses left</span>
 </div><div style="width: 1px; height: 30.5px; background-color: rgba(191, 191, 191, 0.85); opacity: 0.75; margin-left: 5px;"></div><div class="scriptContainerButton" style="cursor: pointer; width: 30.5px; height: 30.5px; background-color: rgb(21, 155, 225); border-radius: 7.5px; margin-left: 7.5px; display: flex; justify-content: center; align-items: center;"><i class="fa fa-clipboard" aria-hidden="true" style="color: white;font-size: 14px;margin-left: 1px;"></i></div><div class="scriptContainerButton" style="cursor: pointer;width: 30.5px;height: 30.5px;background-color: rgb(21, 155, 225);border-radius: 7.5px;margin-left: 5px;display: flex;justify-content: center;align-items: center;"><i class="fa fa-trash" aria-hidden="true" style="color: white; font-size: 19px;"></i></div></div></div>
-</div>
+<div data-id="e221070e" style="display: flex;flex-direction: row;align-items: center;width: calc(100% - 30px);height: 47.5px;margin-top: 7.5px;margin-left: 15px;background-color: white;border-radius: 7.5px;font-family: system-ui;"><input style="margin-left: 6.5px; font-size: 15px; font-weight: 400; border: none; padding: 8.5px; width: calc(6ch - 5px);"><div style="display: flex; flex-direction: row; position: absolute; right: 52.5px;"><div class="scriptContainerButton" style="display: flex;justify-content: center;align-items: center;width: 82.5px;height: 30.5px;color: white;background-color: rgb(21, 155, 225);border-radius: 7.5px;margin-right: 5px;text-align: center;border: none;">
+    <input style="
+    width: calc(2ch + 1px);
+    border: none;
+    color: white;
+    background-color: transparent;
+    font-size: 12.5px;
+    font-family: system-ui;
+    margin-bottom: 0.75px;
+    margin-right: 1px;
+"><span style="
+    font-size: 12.25px;
+    margin-bottom: 2px;
+    margin-right: 0.5px;
+"> uses left</span>
+</div><div style="width: 1px; height: 30.5px; background-color: rgba(191, 191, 191, 0.85); opacity: 0.75; margin-left: 5px;"></div><div class="scriptContainerButton" style="cursor: pointer; width: 30.5px; height: 30.5px; background-color: rgb(21, 155, 225); border-radius: 7.5px; margin-left: 7.5px; display: flex; justify-content: center; align-items: center;"><i class="fa fa-clipboard" aria-hidden="true" style="color: white;font-size: 14px;margin-left: 1px;"></i></div><div class="scriptContainerButton" style="cursor: pointer;width: 30.5px;height: 30.5px;background-color: rgb(21, 155, 225);border-radius: 7.5px;margin-left: 5px;display: flex;justify-content: center;align-items: center;"><i class="fa fa-trash" aria-hidden="true" style="color: white; font-size: 19px;"></i></div></div></div></div>
+<p style="
+    color: #141414;
+    font-family: system-ui;
+    font-size: 11px;
+    margin-left: 15px;
+    margin-bottom: 2.5px;
+">Discord Bots</p>
+<div style="
+        width: calc(100% - 30px);
+        height: 1px;
+        margin-left: 15px;
+        background-color: #141414b0;
+        opacity: 0.5;
+      "></div>
+      <div style="margin-bottom: 12.5px;">
+    <div data-id="e221070e" style="display: flex;flex-direction: row;align-items: center;width: calc(100% - 30px);height: 47.5px;margin-top: 7.5px;margin-left: 15px;background-color: white;border-radius: 7.5px;font-family: system-ui;"><input style="margin-left: 6.5px; font-size: 15px; font-weight: 400; border: none; padding: 8.5px; width: calc(6ch - 5px);"><div style="display: flex; flex-direction: row; position: absolute; right: 52.5px;"><div class="scriptContainerButton" style="cursor: pointer; width: 75px; height: 30.5px; color: white; background-color: rgb(21, 155, 225); border-radius: 7.5px; margin-right: 5px; text-align: center;"><p style="font-size: 15.25px; margin-top: 5px;">Edit</p></div><div class="scriptContainerButton" style="cursor: pointer;width: 82.5px;height: 30.5px;color: white;background-color: rgb(21, 155, 225);border-radius: 7.5px;margin-right: 5px;text-align: center;border: none;">
+    <p style="font-size: 14.25px;margin-top: 5px;">Terminal</p>
+</div><div style="width: 1px; height: 30.5px; background-color: rgba(191, 191, 191, 0.85); opacity: 0.75; margin-left: 5px;"></div><div class="scriptContainerButton" style="cursor: pointer; width: 30.5px; height: 30.5px; background-color: rgb(21, 155, 225); border-radius: 7.5px; margin-left: 7.5px; display: flex; justify-content: center; align-items: center;"><i class="fa fa-trash" aria-hidden="true" style="color: white; font-size: 19px;"></i></div></div></div>
+<div data-id="e221070e" style="display: flex;flex-direction: row;align-items: center;width: calc(100% - 30px);height: 47.5px;margin-top: 7.5px;margin-left: 15px;background-color: white;border-radius: 7.5px;font-family: system-ui;"><input style="margin-left: 6.5px; font-size: 15px; font-weight: 400; border: none; padding: 8.5px; width: calc(6ch - 5px);"><div style="display: flex; flex-direction: row; position: absolute; right: 52.5px;"><div class="scriptContainerButton" style="cursor: pointer; width: 75px; height: 30.5px; color: white; background-color: rgb(21, 155, 225); border-radius: 7.5px; margin-right: 5px; text-align: center;"><p style="font-size: 15.25px; margin-top: 5px;">Edit</p></div><div class="scriptContainerButton" style="cursor: pointer;width: 82.5px;height: 30.5px;color: white;background-color: rgb(21, 155, 225);border-radius: 7.5px;margin-right: 5px;text-align: center;border: none;">
+    <p style="font-size: 14.25px;margin-top: 5px;">Terminal</p>
+</div><div style="width: 1px; height: 30.5px; background-color: rgba(191, 191, 191, 0.85); opacity: 0.75; margin-left: 5px;"></div><div class="scriptContainerButton" style="cursor: pointer; width: 30.5px; height: 30.5px; background-color: rgb(21, 155, 225); border-radius: 7.5px; margin-left: 7.5px; display: flex; justify-content: center; align-items: center;"><i class="fa fa-trash" aria-hidden="true" style="color: white; font-size: 19px;"></i></div></div></div></div>
     </div>
   </body>
 </html>
